Amended toast container to fix overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -130,7 +130,7 @@ input[name='q']::placeholder {
 
 .message-container {
     position: fixed;
-    top: 72px;
+    top: 170px;
     right: 15px;
     z-index: 99999999999;
 }
